Создание пространства (#63)
Добавлена функциональность создания пространства
Произведен рефакторинг
